Prevent home button being covered by safari bar

--- a/src/style.css
+++ b/src/style.css
@@ -659,7 +659,7 @@ button:active {
 }
 
 .page .home-button {
-  margin: 30px auto;
+  margin: 30px auto 125px auto;
 }
 
 .contact > .flex-wrapper {
